sarac/frontend/parser.py
import ply.yacc as yacc

from sarac.frontend.lexer import Lexer, Coord
from sarac.analysis.types import *
from sarac.frontend.ast import *
from sarac.utils.error import Error


class Parser(object):
    precedence = (
        ('left', 'EQUAL', 'NOT_EQUAL'),
        ('left', 'LT', 'LE', 'GT', 'GE'),
        ('left', 'BITWISE_OR'),
        ('left', 'BITWISE_XOR'),
        ('left', 'BITWISE_AND'),
        ('left', 'PLUS', 'MINUS'),
        ('left', 'BITWISE_LS', 'BITWISE_RS'),
        ('left', 'TIMES', 'DIV'),
    )

    def __init__(self, debug=False):
        self.error_count = 0
        self.lexer = Lexer()
        self.lexer.build(optimize=False, debug=debug)
        self.tokens = self.lexer.tokens
        self.parser = yacc.yacc(module=self, optimize=False, debug=debug)

    def parse(self, input_text):
        return self.parser.parse(input_text)

    def p_translation_unit(self, p):
        """translation_unit : external_declaration
                            | translation_unit external_declaration"""
        if len(p) == 3:
            p[0] = p[1]
            p[0].children.append(p[2])
        else:
            p[0] = TranslationUnitList([p[1]])

    def p_external_declaration(self, p):
        """external_declaration : function_definition
                                | declaration """
        p[0] = p[1]

    def p_function_definition(self, p):
        """function_definition : IDENTIFIER LPAREN parameters RPAREN COLON type_specifier compound_statement"""
        identifier = Identifier(p[1][0])
        identifier.coord = Coord(p[1][1], p[1][2])
        p[0] = FunctionDefinition(identifier, p[6], p[3], p[7])


    def p_parameters(self, p):
        """parameters : parameter_list
                      |"""
        if len(p) == 2:
            p[0] = p[1]
        else:
            p[0] = ParameterList([])

    def p_parameter_list(self, p):
        """parameter_list : parameter_list COMMA type_specifier IDENTIFIER
                          | type_specifier IDENTIFIER
        """

        if len(p) == 5:
            identifier = Identifier(p[4][0], p[3])
            identifier.coord = Coord(p[4][1], p[4][2])
            declaration = Declaration(p[3], identifier)
            declaration.coord = identifier.coord
            p[0] = p[1]
            p[0].children.append(declaration)
        else:
            identifier = Identifier(p[2][0], p[1])
            identifier.coord = Coord(p[2][1], p[2][2])
            declaration = Declaration(p[1], identifier)
            declaration.coord = identifier.coord
            p[0] = ParameterList([declaration])

    def p_declaration_list(self, p):
        """declarations : declarations declaration
                        |"""
        if len(p) == 3:
            p[0] = p[1]
            p[0].children.append(p[2])
        else:
            p[0] = DeclarationList([])

    def p_declaration(self, p):
        """declaration : type_specifier IDENTIFIER SEMICOLON
                       | type_specifier IDENTIFIER ASSIGN expression SEMICOLON"""
        identifier = Identifier(p[2][0], p[1])
        identifier.coord = Coord(p[2][1], p[2][2])
        if len(p) == 6:
            # Declaration with initialization: type IDENTIFIER = expression;
            p[0] = Declaration(p[1], identifier, p[4])
        else:
            # Declaration without initialization: type IDENTIFIER;
            p[0] = Declaration(p[1], identifier)
        p[0].coord = identifier.coord

    def p_statement_list(self, p):
        """statements : statements statement
                      |"""
        if len(p) == 3:
            p[0] = p[1]
            p[0].children.append(p[2])
        else:
            p[0] = StatementList([])

    def p_control_if(self, p):
        """statement : IF LPAREN expression RPAREN statement
                     | IF LPAREN expression RPAREN statement ELSE statement
        """
        if len(p) == 6:
            p[0] = If(p[3], p[5])
        else:
            p[0] = If(p[3], p[5], p[7])

    def p_while_loop(self, p):
        """statement : WHILE LPAREN expression RPAREN statement"""
        p[0] = While(p[3], p[5])

    def p_for_loop(self, p):
        """statement : FOR LPAREN expression_statement expression_statement RPAREN statement
                     | FOR LPAREN expression_statement expression_statement expression RPAREN statement"""

        if len(p) == 7:
            p[0] = For(p[3], p[4], None, p[6])
        else:
            p[0] = For(p[3], p[4], p[5], p[7])

    def p_assignment(self, p):
        """statement : IDENTIFIER ASSIGN expression SEMICOLON"""
        identifier = Identifier(p[1][0])
        identifier.coord = Coord(p[1][1], p[1][2])
        p[0] = Assignment(identifier, p[3])
        p[0].coord = identifier.coord

    def p_return_statement(self, p):
        """statement : RETURN SEMICOLON
                     | RETURN expression SEMICOLON"""
        if len(p) == 3:
            # return;
            p[0] = Return(None)
        else:
            # return expression;
            p[0] = Return(p[2])
        # Set coordinate from RETURN token (token value is tuple: (value, line, column))
        if isinstance(p[1], tuple) and len(p[1]) >= 3:
            p[0].coord = Coord(p[1][1], p[1][2])

    def p_compound_statement(self, p):
        """statement : compound_statement"""
        p[0] = p[1]

    def p_expression_statement(self, p):
        """statement : expression_statement"""
        p[0] = p[1]

    def p_compound(self, p):
        """compound_statement : LBRACE declarations statements RBRACE"""
        p[0] = CompoundStatement(p[2], p[3])

    def p_expression_semi(self, p):
        """expression_statement : SEMICOLON
                                | expression SEMICOLON"""
        if len(p) == 2:
            p[0] = None
        else:
            p[0] = p[1]

    def p_binary_expression(self, p):
        """expression : unary_expression
                      | expression EQUAL expression
                      | expression NOT_EQUAL expression
                      | expression LT expression
                      | expression LE expression
                      | expression GT expression
                      | expression GE expression
                      | expression BITWISE_OR expression
                      | expression BITWISE_XOR expression
                      | expression BITWISE_AND expression
                      | expression PLUS expression
                      | expression MINUS expression
                      | expression BITWISE_LS expression
                      | expression BITWISE_RS expression
                      | expression TIMES expression 
                      | expression DIV expression"""
        if len(p) == 2:
            p[0] = p[1]
        else:
            binary_op = BinaryOperator(p[2][0], p[1], p[3])
            binary_op.coord = Coord(p[2][1], p[2][2])
            p[0] = binary_op

    def p_unary_expression(self, p):
        """unary_expression : postfix_expression
                            | unary_operator unary_expression"""
        if len(p) == 2:
            p[0] = p[1]
        else:
            p[0] = UnaryOperator(p[1], p[2])

    def p_postfix_expression(self, p):
        """postfix_expression : primary_expression
                             | postfix_expression INCREMENT
                             | postfix_expression DECREMENT"""
        if len(p) == 2:
            p[0] = p[1]
        else:
            # Postfix increment or decrement
            if p[2][0] == "++":
                p[0] = PostfixIncrement(p[1])
            else:  # "--"
                p[0] = PostfixDecrement(p[1])
            p[0].coord = Coord(p[2][1], p[2][2])

    def p_expression_paren(self, p):
        """primary_expression : LPAREN expression RPAREN"""
        p[0] = p[2]

    def p_primary_expression_number(self, p):
        """primary_expression : NUMBER"""
        number_value = p[1][0]
        type_desc = floatTypeDescriptor if '.' in number_value else integerTypeDescriptor
        p[0] = Constant(number_value, type_desc)

    def p_primary_expression_character(self, p):
        """primary_expression : CHARACTER_LITERAL"""
        # p[1] is a tuple: (char_value, line, column)
        # Create a Constant with charTypeDescriptor
        # Store the character as its ASCII value or as the character itself
        char_value = p[1][0]
        p[0] = Constant(char_value, charTypeDescriptor)
        p[0].coord = Coord(p[1][1], p[1][2])

    def p_primary_expression_string(self, p):
        """primary_expression : STRING_LITERAL"""
        # p[1] is a tuple: (string_value, line, column)
        # Create a Constant with stringTypeDescriptor
        string_value = p[1][0]
        p[0] = Constant(string_value, stringTypeDescriptor)
        p[0].coord = Coord(p[1][1], p[1][2])

    def p_primary_expression_ref(self, p):
        """primary_expression : IDENTIFIER"""
        reference = Reference(p[1][0])
        reference.coord = Coord(p[1][1], p[1][2])
        p[0] = reference

    def p_primary_expression_function_call(self, p):
        """primary_expression : IDENTIFIER LPAREN argument_list RPAREN"""
        identifier = Identifier(p[1][0])
        identifier.coord = Coord(p[1][1], p[1][2])
        function_call = FunctionCall(identifier, p[3])
        function_call.coord = identifier.coord
        p[0] = function_call

    def p_argument_list(self, p):
        """argument_list : expression_list
                        |"""
        if len(p) == 2:
            p[0] = p[1]
        else:
            p[0] = ArgumentList([])

    def p_expression_list(self, p):
        """expression_list : expression_list COMMA expression
                          | expression"""
        if len(p) == 4:
            # expression_list COMMA expression
            p[0] = p[1]
            p[0].children.append(p[3])
        else:
            # expression
            p[0] = ArgumentList([p[1]])

    def p_unary_operator(self, p):
        """unary_operator : NOT
                          | MINUS
                          | PLUS
                          | BITWISE_NOT"""
        p[0] = p[1][0]

    def p_type_specifier(self, p):
        """type_specifier : CHAR
                          | INT
                          | FLOAT
                          | STRING
                          | VOID"""
        type_map = {
            "char": charTypeDescriptor,
            "int": integerTypeDescriptor,
            "float": floatTypeDescriptor,
            "string": stringTypeDescriptor,
            "void": voidTypeDescriptor
        }
        p[0] = type_map.get(p[1][0], stringTypeDescriptor)

    def p_error(self, p):
        self.error_count += 1
        if p is not None:
            token_value = p.value[0] if isinstance(p.value, tuple) else str(p.value)
            line = p.value[1] if isinstance(p.value, tuple) else p.lineno
            column = p.value[2] if isinstance(p.value, tuple) and len(p.value) > 2 else 0
            
            # Common suggestions based on token
            suggestions = {
                '}': "did you forget a semicolon ';' before this?",
                ';': "unexpected semicolon, did you mean to use a comma ','?",
                ')': "did you forget an opening parenthesis '('?",
                ']': "did you forget an opening bracket '['?",
            }
            suggestion = suggestions.get(token_value, None)
            
            # Expected tokens based on context
            expected = "';' or expression"
            if token_value == '}':
                expected = "';' or expression"
            elif token_value == ';':
                expected = "expression or statement"
            
            Error.syntax_error(
                "unexpected token '%s'" % token_value,
                line, column,
                expected=expected,
                suggestion=suggestion
            )

            # Skip tokens until we find a synchronization point
            recovery_tokens = {"SEMICOLON", "LBRACE"}
            while True:
                token = self.parser.token()
                if token is None or token.type in recovery_tokens:
                    break

            self.parser.errok()
            return token
        else:
            Error.syntax_error("unexpected end-of-file", expected="more code")
