sarac/frontend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> type_specifier IDENTIFIER LPAREN parameters RPAREN compound_statement
Rule 6     parameters -> parameter_list
Rule 7     parameters -> <empty>
Rule 8     parameter_list -> parameter_list COMMA type_specifier IDENTIFIER
Rule 9     parameter_list -> type_specifier IDENTIFIER
Rule 10    declarations -> declarations declaration
Rule 11    declarations -> <empty>
Rule 12    declaration -> type_specifier IDENTIFIER SEMICOLON
Rule 13    statements -> statements statement
Rule 14    statements -> <empty>
Rule 15    statement -> IF LPAREN expression RPAREN statement
Rule 16    statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 17    statement -> WHILE LPAREN expression RPAREN statement
Rule 18    statement -> FOR LPAREN expression_statement expression_statement RPAREN statement
Rule 19    statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 20    statement -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 21    statement -> RETURN SEMICOLON
Rule 22    statement -> RETURN expression SEMICOLON
Rule 23    statement -> compound_statement
Rule 24    statement -> expression_statement
Rule 25    compound_statement -> LBRACE declarations statements RBRACE
Rule 26    expression_statement -> SEMICOLON
Rule 27    expression_statement -> expression SEMICOLON
Rule 28    expression -> unary_expression
Rule 29    expression -> expression EQUAL expression
Rule 30    expression -> expression NOT_EQUAL expression
Rule 31    expression -> expression LT expression
Rule 32    expression -> expression LE expression
Rule 33    expression -> expression GT expression
Rule 34    expression -> expression GE expression
Rule 35    expression -> expression PLUS expression
Rule 36    expression -> expression MINUS expression
Rule 37    expression -> expression TIMES expression
Rule 38    expression -> expression DIV expression
Rule 39    unary_expression -> primary_expression
Rule 40    unary_expression -> unary_operator unary_expression
Rule 41    primary_expression -> LPAREN expression RPAREN
Rule 42    primary_expression -> NUMBER
Rule 43    primary_expression -> IDENTIFIER
Rule 44    unary_operator -> NOT
Rule 45    unary_operator -> MINUS
Rule 46    unary_operator -> PLUS
Rule 47    type_specifier -> CHAR
Rule 48    type_specifier -> INT
Rule 49    type_specifier -> FLOAT

Terminals, with rules where they appear

ASSIGN               : 20
CHAR                 : 47
COMMA                : 8
DIV                  : 38
DO                   : 
ELSE                 : 16
EQUAL                : 29
FLOAT                : 49
FOR                  : 18 19
GE                   : 34
GT                   : 33
IDENTIFIER           : 5 8 9 12 20 43
IF                   : 15 16
INT                  : 48
LBRACE               : 25
LBRACKET             : 
LE                   : 32
LPAREN               : 5 15 16 17 18 19 41
LT                   : 31
MINUS                : 36 45
NOT                  : 44
NOT_EQUAL            : 30
NUMBER               : 42
PLUS                 : 35 46
RBRACE               : 25
RBRACKET             : 
RETURN               : 21 22
RPAREN               : 5 15 16 17 18 19 41
SEMICOLON            : 12 20 21 22 26 27
TIMES                : 37
WHILE                : 17
error                : 

Nonterminals, with rules where they appear

compound_statement   : 5 23
declaration          : 4 10
declarations         : 10 25
expression           : 15 16 17 19 20 22 27 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 41
expression_statement : 18 18 19 19 24
external_declaration : 1 2
function_definition  : 3
parameter_list       : 6 8
parameters           : 5
primary_expression   : 39
statement            : 13 15 16 16 17 18 19
statements           : 13 25
translation_unit     : 2 0
type_specifier       : 5 8 9 12
unary_expression     : 28 40
unary_operator       : 40

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . type_specifier IDENTIFIER LPAREN parameters RPAREN compound_statement
    (12) declaration -> . type_specifier IDENTIFIER SEMICOLON
    (47) type_specifier -> . CHAR
    (48) type_specifier -> . INT
    (49) type_specifier -> . FLOAT

    CHAR            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 5

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . type_specifier IDENTIFIER LPAREN parameters RPAREN compound_statement
    (12) declaration -> . type_specifier IDENTIFIER SEMICOLON
    (47) type_specifier -> . CHAR
    (48) type_specifier -> . INT
    (49) type_specifier -> . FLOAT

    CHAR            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    external_declaration           shift and go to state 9
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 5

state 2

    (1) translation_unit -> external_declaration .

    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) function_definition -> type_specifier . IDENTIFIER LPAREN parameters RPAREN compound_statement
    (12) declaration -> type_specifier . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 10


state 6

    (47) type_specifier -> CHAR .

    IDENTIFIER      reduce using rule 47 (type_specifier -> CHAR .)


state 7

    (48) type_specifier -> INT .

    IDENTIFIER      reduce using rule 48 (type_specifier -> INT .)


state 8

    (49) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 49 (type_specifier -> FLOAT .)


state 9

    (2) translation_unit -> translation_unit external_declaration .

    CHAR            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    FLOAT           reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)


state 10

    (5) function_definition -> type_specifier IDENTIFIER . LPAREN parameters RPAREN compound_statement
    (12) declaration -> type_specifier IDENTIFIER . SEMICOLON

    LPAREN          shift and go to state 11
    SEMICOLON       shift and go to state 12


state 11

    (5) function_definition -> type_specifier IDENTIFIER LPAREN . parameters RPAREN compound_statement
    (6) parameters -> . parameter_list
    (7) parameters -> .
    (8) parameter_list -> . parameter_list COMMA type_specifier IDENTIFIER
    (9) parameter_list -> . type_specifier IDENTIFIER
    (47) type_specifier -> . CHAR
    (48) type_specifier -> . INT
    (49) type_specifier -> . FLOAT

    RPAREN          reduce using rule 7 (parameters -> .)
    CHAR            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    type_specifier                 shift and go to state 13
    parameters                     shift and go to state 14
    parameter_list                 shift and go to state 15

state 12

    (12) declaration -> type_specifier IDENTIFIER SEMICOLON .

    CHAR            reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    INT             reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    $end            reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    IF              reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    WHILE           reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FOR             reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    RETURN          reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    LBRACE          reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    SEMICOLON       reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    LPAREN          reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    NUMBER          reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    NOT             reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    MINUS           reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)
    PLUS            reduce using rule 12 (declaration -> type_specifier IDENTIFIER SEMICOLON .)


state 13

    (9) parameter_list -> type_specifier . IDENTIFIER

    IDENTIFIER      shift and go to state 16


state 14

    (5) function_definition -> type_specifier IDENTIFIER LPAREN parameters . RPAREN compound_statement

    RPAREN          shift and go to state 17


state 15

    (6) parameters -> parameter_list .
    (8) parameter_list -> parameter_list . COMMA type_specifier IDENTIFIER

    RPAREN          reduce using rule 6 (parameters -> parameter_list .)
    COMMA           shift and go to state 18


state 16

    (9) parameter_list -> type_specifier IDENTIFIER .

    COMMA           reduce using rule 9 (parameter_list -> type_specifier IDENTIFIER .)
    RPAREN          reduce using rule 9 (parameter_list -> type_specifier IDENTIFIER .)


state 17

    (5) function_definition -> type_specifier IDENTIFIER LPAREN parameters RPAREN . compound_statement
    (25) compound_statement -> . LBRACE declarations statements RBRACE

    LBRACE          shift and go to state 20

    compound_statement             shift and go to state 19

state 18

    (8) parameter_list -> parameter_list COMMA . type_specifier IDENTIFIER
    (47) type_specifier -> . CHAR
    (48) type_specifier -> . INT
    (49) type_specifier -> . FLOAT

    CHAR            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    type_specifier                 shift and go to state 21

state 19

    (5) function_definition -> type_specifier IDENTIFIER LPAREN parameters RPAREN compound_statement .

    CHAR            reduce using rule 5 (function_definition -> type_specifier IDENTIFIER LPAREN parameters RPAREN compound_statement .)
    INT             reduce using rule 5 (function_definition -> type_specifier IDENTIFIER LPAREN parameters RPAREN compound_statement .)
    FLOAT           reduce using rule 5 (function_definition -> type_specifier IDENTIFIER LPAREN parameters RPAREN compound_statement .)
    $end            reduce using rule 5 (function_definition -> type_specifier IDENTIFIER LPAREN parameters RPAREN compound_statement .)


state 20

    (25) compound_statement -> LBRACE . declarations statements RBRACE
    (10) declarations -> . declarations declaration
    (11) declarations -> .

    CHAR            reduce using rule 11 (declarations -> .)
    INT             reduce using rule 11 (declarations -> .)
    FLOAT           reduce using rule 11 (declarations -> .)
    RBRACE          reduce using rule 11 (declarations -> .)
    IF              reduce using rule 11 (declarations -> .)
    WHILE           reduce using rule 11 (declarations -> .)
    FOR             reduce using rule 11 (declarations -> .)
    IDENTIFIER      reduce using rule 11 (declarations -> .)
    RETURN          reduce using rule 11 (declarations -> .)
    LBRACE          reduce using rule 11 (declarations -> .)
    SEMICOLON       reduce using rule 11 (declarations -> .)
    LPAREN          reduce using rule 11 (declarations -> .)
    NUMBER          reduce using rule 11 (declarations -> .)
    NOT             reduce using rule 11 (declarations -> .)
    MINUS           reduce using rule 11 (declarations -> .)
    PLUS            reduce using rule 11 (declarations -> .)

    declarations                   shift and go to state 22

state 21

    (8) parameter_list -> parameter_list COMMA type_specifier . IDENTIFIER

    IDENTIFIER      shift and go to state 23


state 22

    (25) compound_statement -> LBRACE declarations . statements RBRACE
    (10) declarations -> declarations . declaration
    (13) statements -> . statements statement
    (14) statements -> .
    (12) declaration -> . type_specifier IDENTIFIER SEMICOLON
    (47) type_specifier -> . CHAR
    (48) type_specifier -> . INT
    (49) type_specifier -> . FLOAT

    RBRACE          reduce using rule 14 (statements -> .)
    IF              reduce using rule 14 (statements -> .)
    WHILE           reduce using rule 14 (statements -> .)
    FOR             reduce using rule 14 (statements -> .)
    IDENTIFIER      reduce using rule 14 (statements -> .)
    RETURN          reduce using rule 14 (statements -> .)
    LBRACE          reduce using rule 14 (statements -> .)
    SEMICOLON       reduce using rule 14 (statements -> .)
    LPAREN          reduce using rule 14 (statements -> .)
    NUMBER          reduce using rule 14 (statements -> .)
    NOT             reduce using rule 14 (statements -> .)
    MINUS           reduce using rule 14 (statements -> .)
    PLUS            reduce using rule 14 (statements -> .)
    CHAR            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    statements                     shift and go to state 24
    declaration                    shift and go to state 25
    type_specifier                 shift and go to state 26

state 23

    (8) parameter_list -> parameter_list COMMA type_specifier IDENTIFIER .

    COMMA           reduce using rule 8 (parameter_list -> parameter_list COMMA type_specifier IDENTIFIER .)
    RPAREN          reduce using rule 8 (parameter_list -> parameter_list COMMA type_specifier IDENTIFIER .)


state 24

    (25) compound_statement -> LBRACE declarations statements . RBRACE
    (13) statements -> statements . statement
    (15) statement -> . IF LPAREN expression RPAREN statement
    (16) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (17) statement -> . WHILE LPAREN expression RPAREN statement
    (18) statement -> . FOR LPAREN expression_statement expression_statement RPAREN statement
    (19) statement -> . FOR LPAREN expression_statement expression_statement expression RPAREN statement
    (20) statement -> . IDENTIFIER ASSIGN expression SEMICOLON
    (21) statement -> . RETURN SEMICOLON
    (22) statement -> . RETURN expression SEMICOLON
    (23) statement -> . compound_statement
    (24) statement -> . expression_statement
    (25) compound_statement -> . LBRACE declarations statements RBRACE
    (26) expression_statement -> . SEMICOLON
    (27) expression_statement -> . expression SEMICOLON
    (28) expression -> . unary_expression
    (29) expression -> . expression EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression GE expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIV expression
    (39) unary_expression -> . primary_expression
    (40) unary_expression -> . unary_operator unary_expression
    (41) primary_expression -> . LPAREN expression RPAREN
    (42) primary_expression -> . NUMBER
    (43) primary_expression -> . IDENTIFIER
    (44) unary_operator -> . NOT
    (45) unary_operator -> . MINUS
    (46) unary_operator -> . PLUS

    RBRACE          shift and go to state 27
    IF              shift and go to state 29
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    IDENTIFIER      shift and go to state 35
    RETURN          shift and go to state 37
    LBRACE          shift and go to state 20
    SEMICOLON       shift and go to state 36
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 44
    NOT             shift and go to state 45
    MINUS           shift and go to state 41
    PLUS            shift and go to state 40

    statement                      shift and go to state 28
    expression                     shift and go to state 31
    expression_statement           shift and go to state 34
    compound_statement             shift and go to state 38
    unary_expression               shift and go to state 39
    primary_expression             shift and go to state 42
    unary_operator                 shift and go to state 43

state 25

    (10) declarations -> declarations declaration .

    CHAR            reduce using rule 10 (declarations -> declarations declaration .)
    INT             reduce using rule 10 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 10 (declarations -> declarations declaration .)
    RBRACE          reduce using rule 10 (declarations -> declarations declaration .)
    IF              reduce using rule 10 (declarations -> declarations declaration .)
    WHILE           reduce using rule 10 (declarations -> declarations declaration .)
    FOR             reduce using rule 10 (declarations -> declarations declaration .)
    IDENTIFIER      reduce using rule 10 (declarations -> declarations declaration .)
    RETURN          reduce using rule 10 (declarations -> declarations declaration .)
    LBRACE          reduce using rule 10 (declarations -> declarations declaration .)
    SEMICOLON       reduce using rule 10 (declarations -> declarations declaration .)
    LPAREN          reduce using rule 10 (declarations -> declarations declaration .)
    NUMBER          reduce using rule 10 (declarations -> declarations declaration .)
    NOT             reduce using rule 10 (declarations -> declarations declaration .)
    MINUS           reduce using rule 10 (declarations -> declarations declaration .)
    PLUS            reduce using rule 10 (declarations -> declarations declaration .)


state 26

    (12) declaration -> type_specifier . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 46


state 27

    (25) compound_statement -> LBRACE declarations statements RBRACE .

    CHAR            reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    INT             reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    FLOAT           reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    $end            reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    RBRACE          reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    IF              reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    WHILE           reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    FOR             reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    IDENTIFIER      reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    RETURN          reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    LBRACE          reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    SEMICOLON       reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    LPAREN          reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    NUMBER          reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    NOT             reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    MINUS           reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    PLUS            reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)
    ELSE            reduce using rule 25 (compound_statement -> LBRACE declarations statements RBRACE .)


state 28

    (13) statements -> statements statement .

    RBRACE          reduce using rule 13 (statements -> statements statement .)
    IF              reduce using rule 13 (statements -> statements statement .)
    WHILE           reduce using rule 13 (statements -> statements statement .)
    FOR             reduce using rule 13 (statements -> statements statement .)
    IDENTIFIER      reduce using rule 13 (statements -> statements statement .)
    RETURN          reduce using rule 13 (statements -> statements statement .)
    LBRACE          reduce using rule 13 (statements -> statements statement .)
    SEMICOLON       reduce using rule 13 (statements -> statements statement .)
    LPAREN          reduce using rule 13 (statements -> statements statement .)
    NUMBER          reduce using rule 13 (statements -> statements statement .)
    NOT             reduce using rule 13 (statements -> statements statement .)
    MINUS           reduce using rule 13 (statements -> statements statement .)
    PLUS            reduce using rule 13 (statements -> statements statement .)


state 29

    (15) statement -> IF . LPAREN expression RPAREN statement
    (16) statement -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 47


state 30

    (41) primary_expression -> LPAREN . expression RPAREN
    (28) expression -> . unary_expression
    (29) expression -> . expression EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression GE expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIV expression
    (39) unary_expression -> . primary_expression
    (40) unary_expression -> . unary_operator unary_expression
    (41) primary_expression -> . LPAREN expression RPAREN
    (42) primary_expression -> . NUMBER
    (43) primary_expression -> . IDENTIFIER
    (44) unary_operator -> . NOT
    (45) unary_operator -> . MINUS
    (46) unary_operator -> . PLUS

    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 44
    IDENTIFIER      shift and go to state 49
    NOT             shift and go to state 45
    MINUS           shift and go to state 41
    PLUS            shift and go to state 40

    expression                     shift and go to state 48
    unary_expression               shift and go to state 39
    primary_expression             shift and go to state 42
    unary_operator                 shift and go to state 43

state 31

    (27) expression_statement -> expression . SEMICOLON
    (29) expression -> expression . EQUAL expression
    (30) expression -> expression . NOT_EQUAL expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . LE expression
    (33) expression -> expression . GT expression
    (34) expression -> expression . GE expression
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIV expression
